Fix alignment and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,11 @@ p {
     align-self: center;
 }
 
+table {
+    width: 100%;
+    table-layout: fixed;
+}
+
 .bold__description {
     font-weight: 600;
 }
@@ -522,6 +527,7 @@ body.project ul {
     font-weight: 500;
     font-size: 1.5rem;
     text-align: center;
+    vertical-align: top;
     color: #fff4e9;
 }
 
@@ -585,6 +591,7 @@ body.project ul {
     font-weight: 500;
     font-size: 1.875rem;
     text-align: center;
+    padding-left: 10px;
     color: #fff4e9;
 }
 
